remove components in find package for hdf5 to avoid errors with cmake 3.16.5

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(g4pbc REQUIRED NO_MODULE)
 include_directories(${g4pbc_INCLUDE_DIRS})
 
 # HDF5
-find_package(HDF5 REQUIRED COMPONENTS C HL CXX)
+find_package(HDF5 REQUIRED)
 include_directories(${HDF5_INCLUDE_DIRS} hdf5_hl_cpp )
 
 include(${Geant4_USE_FILE})
